--- a/metis-framework-common/pom.xml
+++ b/metis-framework-common/pom.xml
@@ -10,23 +10,22 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>metis-framework-common</artifactId>
-	<version>1.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>org.mongodb.morphia</groupId>
             <artifactId>morphia</artifactId>
-            <version>1.1.0</version>
+            <version>${version.morphia}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.6.0</version>
+            <version>${version.jackson}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>4.2.4.RELEASE</version>
+            <version>${version.spring}</version>
         </dependency>
 
     </dependencies>
