--- a/metis-framework-rest/pom.xml
+++ b/metis-framework-rest/pom.xml
@@ -92,6 +92,11 @@
             <version>${version.spring}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>eu.europeana.metis</groupId>
+            <artifactId>metis-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
