--- a/metis-framework-service/pom.xml
+++ b/metis-framework-service/pom.xml
@@ -96,6 +96,12 @@
             <artifactId>commons-io</artifactId>
             <version>${version.commonsio}</version>
         </dependency>
+        <dependency>
+            <groupId>eu.europeana.metis</groupId>
+            <artifactId>metis-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <!-- Run with -Dspring.profiles.active=production -->
 
