--- a/metis-framework-rest/pom.xml
+++ b/metis-framework-rest/pom.xml
@@ -97,6 +97,11 @@
             <artifactId>metis-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
