--- a/metis-framework-ui/pom.xml
+++ b/metis-framework-ui/pom.xml
@@ -48,6 +48,33 @@
                     <testSource>1.8</testSource>
                     <testTarget>1.8</testTarget>
                 </configuration>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>2.10</version>
+                    <executions>
+                        <execution>
+                            <id>copy-installed</id>
+                            <phase>install</phase>
+                            <goals>
+                                <goal>copy</goal>
+                                <goal>unpack</goal>
+                            </goals>
+                            <configuration>
+                                <artifactItems>
+                                    <artifactItem>
+                                        <groupId>eu.europeana.metis</groupId>
+                                        <artifactId>europeana-java-styleguide</artifactId>
+                                        <version>1.0-SNAPSHOT</version>
+                                        <type>jar</type>
+                                    </artifactItem>
+                                </artifactItems>
+                                <overWriteIfNewer>true</overWriteIfNewer>
+                                <outputDirectory>${project.basedir}/src/main/webapp</outputDirectory>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugin>
         </plugins>
         <pluginManagement>
@@ -72,6 +99,11 @@
 
         </dependency>
 
+        <dependency>
+            <groupId>com.github.jknack</groupId>
+            <artifactId>handlebars</artifactId>
+            <version>4.0.5</version>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
