--- a/metis-framework-ui/pom.xml
+++ b/metis-framework-ui/pom.xml
@@ -50,7 +50,8 @@
                 </configuration>
 
             </plugin>
-            <plugin>
+            <!-- TODO uncomment when in place-->
+          <!--  <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>2.10</version>
@@ -76,7 +77,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin> -->
         </plugins>
         <pluginManagement>
             <plugins>
