Enrichment Redis and Preview Service

--- a/metis-framework-ui/src/main/resources/authentication.properties
+++ b/metis-framework-ui/src/main/resources/authentication.properties
@@ -1,11 +1,12 @@
 ### TEL LDAP Settings ###
-#ldap.url=ldaps://ldap.tel.eanadev.org:636
-#ldap.manager.dn=cn=bind,dc=theeuropeanlibrary,dc=org
-#ldap.manager.pwd=-V7YGZu3
-
-ldap.url=ldap://localhost:389/dc=europeana,dc=eu
+ldap.url=ldap://chaos.eanadev.org:389/dc=europeana,dc=eu
 ldap.manager.dn=cn=admin,dc=europeana,dc=eu
-ldap.manager.pwd=secret
+ldap.manager.base.dn=dc=europeana,dc=eu
+ldap.manager.pwd=admin
+
+#ldap.url=ldap://localhost:389/dc=europeana,dc=eu
+#ldap.manager.dn=cn=admin,dc=europeana,dc=eu
+#ldap.manager.pwd=secret
 
 ldif.url=ldap://127.0.0.1:18880
 ldif.dn=uid=admin,ou=system
