--- a/metis-framework-common/pom.xml
+++ b/metis-framework-common/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>org.mongodb.morphia</groupId>
             <artifactId>morphia</artifactId>
-            <version>${version.morphia}</version>
+            <version>1.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -43,6 +43,15 @@
             <artifactId>spring-web</artifactId>
             <version>${version.spring}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.plugin</groupId>
+            <artifactId>spring-plugin-core</artifactId>
+            <version>1.2.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.4.0-rc1</version>
+        </dependency>
     </dependencies>
 </project>
