--- a/metis-framework-service/pom.xml
+++ b/metis-framework-service/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
-            <version>3.2.2</version>
+            <version>3.4.0-rc1</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
