--- a/metis-framework-common/pom.xml
+++ b/metis-framework-common/pom.xml
@@ -53,5 +53,10 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>3.4.0-rc1</version>
         </dependency>
+        <dependency>
+            <groupId>eu.europeana.metis</groupId>
+            <artifactId>dereference-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
