Quality assurance proof of concept- Temprarily removed the checks for datasets as it would block testing

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>metis-framework-rest</module>
         <module>metis-framework-ui</module>
         <module>metis-framework-rest-client</module>
+        <module>metis-framework-workflows</module>
     </modules>
     <packaging>pom</packaging>
 
