Initial mail service for Metis

--- a/metis-framework-rest/src/main/resources/metis.properties
+++ b/metis-framework-rest/src/main/resources/metis.properties
@@ -6,3 +6,7 @@ mongo.pass=
 crm.scope=crmapi
 crm.authtoken=657b5b5a4344e0149251cfab9132e048
 crm.baseUrl=https://crm.zoho.com/crm/private/json/CustomModule1/
+mail.host=
+mail.port=
+mail.username=
+mail.password=
