--- a/metis-framework-rest/pom.xml
+++ b/metis-framework-rest/pom.xml
@@ -107,6 +107,11 @@
             <artifactId>metis-workflow-qa</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>eu.europeana.metis</groupId>
+            <artifactId>metis-framework-mail</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
