--- a/metis-framework-service/pom.xml
+++ b/metis-framework-service/pom.xml
@@ -97,6 +97,11 @@
             <version>${version.commonsio}</version>
         </dependency>
         <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+        <dependency>
             <groupId>eu.europeana.metis</groupId>
             <artifactId>metis-common</artifactId>
             <version>1.0-SNAPSHOT</version>
