--- a/metis-framework-workflows/metis-workflow-qa/pom.xml
+++ b/metis-framework-workflows/metis-workflow-qa/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>metis-workflow-qa</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>eu.europeana.metis</groupId>
+            <artifactId>metis-framework-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
