update morphia from snapshot to stable for resolvable dependecy on clean build

--- a/metis-framework-common/pom.xml
+++ b/metis-framework-common/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>org.mongodb.morphia</groupId>
             <artifactId>morphia</artifactId>
-            <version>1.3.0-SNAPSHOT</version>
+            <version>${version.morphia}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
