Added  private and public profiles on organization based on api keys, fixed REST client

--- a/metis-framework-rest/manifest.yml
+++ b/metis-framework-rest/manifest.yml
@@ -1,12 +1,13 @@
 ---
 applications:
-- name: metis-framework-test
+- name: metis-framework-test-mamakis
   memory: 2048M
   instances: 1
-  host: metis-framework-test
+  host: metis-framework-test-mamakis
   path: target/metis-framework-rest-1.0-SNAPSHOT.war
   buildpack: https://github.com/europeana/java-buildpack.git#feat/java8
   services:
     - annotation-test-mongo
+    - radio-test-redis
   env:
     SPRING_PROFILES_ACTIVE: development
