--- a/metis-framework-rest/src/main/resources/metis.properties
+++ b/metis-framework-rest/src/main/resources/metis.properties
@@ -7,6 +7,9 @@ crm.scope=crmapi
 crm.authtoken=657b5b5a4344e0149251cfab9132e048
 crm.baseUrl=https://crm.zoho.com/crm/private/json/CustomModule1/
 mail.host=
-mail.port=
+mail.port=0
 mail.username=
 mail.password=
+redis.host=
+redis.port=0
+redis.password=
