RE #2355 : Add ecloud properties

--- a/metis-framework-rest/src/main/resources/ecloud.properties
+++ b/metis-framework-rest/src/main/resources/ecloud.properties
@@ -1,4 +1,4 @@
-ecloud.baseurl=
-ecloud.provider=
-ecloud.username=
-ecloud.password=
+ecloud.baseurl="http://localhost:8080"
+ecloud.provider="europeana"
+ecloud.username="admin"
+ecloud.password="ecloud_admin"
