RE #2355 : Fix tests

--- a/metis-framework-service/pom.xml
+++ b/metis-framework-service/pom.xml
@@ -33,6 +33,17 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>eu.europeana.cloud</groupId>
+            <artifactId>ecloud-service-mcs-rest-client-java</artifactId>
+            <version>0.6-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.europeana.cloud</groupId>
+            <artifactId>ecloud-service-uis-rest-client-java</artifactId>
+            <version>0.6-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
             <version>3.4.0-rc1</version>
