--- a/metis-framework-rest/src/main/resources/ecloud.properties
+++ b/metis-framework-rest/src/main/resources/ecloud.properties
@@ -1,4 +1,4 @@
-ecloud.baseurl="http://localhost:8080"
+ecloud.baseMcsUrl=http://localhost:8080/mcs;
 ecloud.provider="europeana"
 ecloud.username="admin"
 ecloud.password="ecloud_admin"
