--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <module>metis-framework-rest-client</module>
         <module>metis-framework-workflows</module>
         <module>metis-framework-mail</module>
+        <module>metis-framework-search</module>
     </modules>
     <packaging>pom</packaging>
 
