--- a/metis-framework-rest-client/pom.xml
+++ b/metis-framework-rest-client/pom.xml
@@ -47,5 +47,10 @@
             <artifactId>metis-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>eu.europeana.metis</groupId>
+            <artifactId>metis-framework-search</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
