--- a/metis-framework-service/pom.xml
+++ b/metis-framework-service/pom.xml
@@ -107,6 +107,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>eu.europeana.metis</groupId>
+            <artifactId>metis-framework-search</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <!-- Run with -Dspring.profiles.active=production -->
 
