FIx unit test dep

--- a/metis-framework-search/pom.xml
+++ b/metis-framework-search/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>spring-test</artifactId>
             <version>4.2.5.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${version.junit}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
