--- a/metis-framework-rest/manifest.yml
+++ b/metis-framework-rest/manifest.yml
@@ -1,9 +1,9 @@
 ---
 applications:
-- name: metis-framework-test
+- name: metis-framework-rest-test
   memory: 2048M
   instances: 1
-  host: metis-framework-test
+  host: metis-framework-rest-test
   path: target/metis-framework-rest-1.0-SNAPSHOT.war
   buildpack: https://github.com/europeana/java-buildpack.git#feat/java8
   services:
