--- a/metis-framework-search/pom.xml
+++ b/metis-framework-search/pom.xml
@@ -59,9 +59,7 @@
                         </goals>
                         <configuration>
                             <tasks>
-                                <delete>
-                                    <fileset dir="src/test/resources/solr/org_core/data/"/>
-                                </delete>
+                                <delete dir="src/test/resources/solr/org_core/data/" failonerror="false" />
                             </tasks>
                         </configuration>
                     </execution>
