--- a/metis-framework-rest/src/main/resources/metis.properties
+++ b/metis-framework-rest/src/main/resources/metis.properties
@@ -1,16 +1,24 @@
+#Mongo
 mongo.host=172.17.0.2
 mongo.port=27017
 mongo.db=metisds
 mongo.username=
-mongo.pass=
+mongo.password=
+
+#CRM
 crm.scope=crmapi
 crm.authtoken=657b5b5a4344e0149251cfab9132e048
 crm.baseUrl=https://crm.zoho.com/crm/private/json/CustomModule1/
+
+#Mail
 mail.host=
 mail.port=0
 mail.username=
 mail.password=
+
+#Redis
 redis.host=
 redis.port=0
 redis.password=
+
 solr.url=
