--- a/metis-framework-rest/pom.xml
+++ b/metis-framework-rest/pom.xml
@@ -112,6 +112,11 @@
             <artifactId>metis-framework-mail</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+      <dependency>
+        <groupId>eu.europeana.corelib</groupId>
+        <artifactId>corelib-common-storage</artifactId>
+        <version>2.6.1-SNAPSHOT</version>
+      </dependency>
     </dependencies>
     <profiles>
         <profile>
