--- a/metis-core-search/pom.xml
+++ b/metis-core-search/pom.xml
@@ -43,6 +43,11 @@
             <version>${version.junit}</version>
             <scope>test</scope>
         </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.dataformat</groupId>
+        <artifactId>jackson-dataformat-xml</artifactId>
+        <version>${version.jackson}</version>
+      </dependency>
     </dependencies>
 
     <build>
