--- a/metis-core-search/pom.xml
+++ b/metis-core-search/pom.xml
@@ -48,6 +48,15 @@
         <artifactId>jackson-dataformat-xml</artifactId>
         <version>${version.jackson}</version>
       </dependency>
+      <dependency>
+        <groupId>eu.europeana.metis</groupId>
+        <artifactId>metis-core-common</artifactId>
+      </dependency>
+        <dependency>
+            <groupId>eu.europeana.metis</groupId>
+            <artifactId>metis-core-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
