Update requests page with class models

--- a/metis-core-rest/src/main/resources/metis.properties
+++ b/metis-core-rest/src/main/resources/metis.properties
@@ -1,7 +1,7 @@
 #Mongo
-mongo.hosts=172.17.0.2
+mongo.hosts=metis-storage.eanadev.org
 mongo.port=27017
-mongo.db=metisds
+mongo.db=metis-core
 mongo.username=
 mongo.password=
 
@@ -17,8 +17,8 @@ mail.username=
 mail.password=
 
 #Redis
-redis.host=
-redis.port=0
+redis.host=metis-storage.eanadev.org
+redis.port=6379
 redis.password=
 
-solr.url=
+solr.url=http://metis-storage.eanadev.org:8983/solr/organizations_search
