--- a/metis-core-common/pom.xml
+++ b/metis-core-common/pom.xml
@@ -68,5 +68,10 @@
         <artifactId>swagger-annotations</artifactId>
         <version>1.5.5</version>
       </dependency>
+      <dependency>
+        <groupId>org.springframework.plugin</groupId>
+        <artifactId>spring-plugin-metadata</artifactId>
+        <version>1.2.0.RELEASE</version>
+      </dependency>
     </dependencies>
 </project>
