--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -1,3 +1,10 @@
+#Socks Proxy
+socks.proxy.enabled=
+socks.proxy.host=
+socks.proxy.port=
+socks.proxy.username=
+socks.proxy.password=
+
 #Mongo
 mongo.hosts=
 mongo.port=
