--- a/metis-core-service/pom.xml
+++ b/metis-core-service/pom.xml
@@ -56,6 +56,11 @@
         <!--</dependency>-->
 
         <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>${version.rabbitmq}</version>
+        </dependency>
+        <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
             <version>3.4.2</version>
