--- a/metis-core-common/pom.xml
+++ b/metis-core-common/pom.xml
@@ -62,28 +62,28 @@
     <dependency>
       <groupId>org.springframework.plugin</groupId>
       <artifactId>spring-plugin-core</artifactId>
-      <version>1.2.0.RELEASE</version>
+      <version>${version.spring.plugin.core}</version>
     </dependency>
     <dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongo-java-driver</artifactId>
-      <version>3.4.0-rc1</version>
+      <version>${version.mongo.java.driver}</version>
     </dependency>
 
     <dependency>
       <groupId>io.swagger</groupId>
       <artifactId>swagger-annotations</artifactId>
-      <version>1.5.5</version>
+      <version>${version.swagger.annotations}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.plugin</groupId>
       <artifactId>spring-plugin-metadata</artifactId>
-      <version>1.2.0.RELEASE</version>
+      <version>${version.spring.plugin.metadata}</version>
     </dependency>
     <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <version>${version.commonslang}</version>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>${version.commons.lang}</version>
     </dependency>
   </dependencies>
 </project>
