--- a/metis-core-mail/pom.xml
+++ b/metis-core-mail/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>javax.mail</artifactId>
-            <version>1.5.6</version>
+            <version>${version.javax.mail}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>eu.europeana.metis</groupId>
             <artifactId>metis-core-account</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
