--- a/metis-core-workflows/metis-core-workflow-qa/pom.xml
+++ b/metis-core-workflows/metis-core-workflow-qa/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>eu.europeana.metis</groupId>
             <artifactId>metis-core-service</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
