--- a/metis-core-workflows/pom.xml
+++ b/metis-core-workflows/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>eu.europeana.metis</groupId>
             <artifactId>metis-core-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
