RE #2601 Fix dependency for correct serialization on metis-core methods

--- a/metis-core-rest/pom.xml
+++ b/metis-core-rest/pom.xml
@@ -48,6 +48,10 @@
           <artifactId>solr-solrj</artifactId>
           <groupId>org.apache.solr</groupId>
         </exclusion>
+        <exclusion>
+          <artifactId>wstx-asl</artifactId>
+          <groupId>org.codehaus.woodstox</groupId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
