RE #2601 Add scheduler thread with retrieval of schedules to be executed

--- a/metis-core-service/pom.xml
+++ b/metis-core-service/pom.xml
@@ -25,8 +25,20 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>metis-core-service</artifactId>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
-    <dependencies>
+  <dependencies>
         <dependency>
             <groupId>eu.europeana.metis</groupId>
             <artifactId>metis-core-common</artifactId>
