--- a/metis-core-common/pom.xml
+++ b/metis-core-common/pom.xml
@@ -25,6 +25,18 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>metis-core-common</artifactId>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
   <dependencies>
     <dependency>
