RE #2649 Move hardcoded field configuration to property file

--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -1,3 +1,10 @@
+#Orchestration
+max.concurrent.threads=
+monitor.check.interval.in.secs=
+periodic.failsafe.check.in.secs=
+periodic.scheduler.check.in.secs=
+redisson.lock.watchdog.timeout.in.secs=
+
 #Socks Proxy
 socks.proxy.enabled=
 socks.proxy.host=
