Add support for sonarQube

--- a/metis-core-account/pom.xml
+++ b/metis-core-account/pom.xml
@@ -29,6 +29,7 @@
 
   <properties>
     <m2eclipse.wtp.contextRoot>/</m2eclipse.wtp.contextRoot>
+    <sonar.skip>true</sonar.skip>
   </properties>
   <build>
     <plugins>
