--- a/metis-core-workflows/pom.xml
+++ b/metis-core-workflows/pom.xml
@@ -10,6 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>metis-core-workflows</artifactId>
     <packaging>pom</packaging>
+    <properties>
+        <sonar.skip>true</sonar.skip>
+    </properties>
     <modules>
         <module>metis-core-workflow-qa</module>
     </modules>
