--- a/metis-core-account/pom.xml
+++ b/metis-core-account/pom.xml
@@ -50,6 +50,23 @@
           <testTarget>1.8</testTarget>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>${version.cobertura}</version>
+        <configuration>
+          <skip>true</skip>
+          <check/>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${version.surefire.plugin}</version>
+        <configuration>
+          <skipTests>true</skipTests>
+        </configuration>
+      </plugin>
     </plugins>
     <pluginManagement>
       <plugins>
