MET-159 Clean and add mock boolean flag for plugins

--- a/metis-core-rest/pom.xml
+++ b/metis-core-rest/pom.xml
@@ -40,6 +40,11 @@
   </build>
   <dependencies>
     <dependency>
+      <groupId>eu.europeana.cloud</groupId>
+      <artifactId>ecloud-service-uis-rest-client-java</artifactId>
+      <version>${version.ecloud}</version>
+    </dependency>
+    <dependency>
       <groupId>eu.europeana.corelib</groupId>
       <artifactId>corelib-web</artifactId>
       <version>${version.corelib}</version>
