MET-159 Split configuration and merge properties files

--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -34,3 +34,10 @@ redis.port=0
 redis.password=
 
 solr.url=
+
+#ECloud
+ecloud.baseUisUrl=
+ecloud.baseMcsUrl=
+ecloud.provider=
+ecloud.username=
+ecloud.password=
