MET-159 Add dataset creation when execution is requested and before it is submitted in the queue

--- a/metis-core-rest/pom.xml
+++ b/metis-core-rest/pom.xml
@@ -45,6 +45,11 @@
       <version>${version.ecloud}</version>
     </dependency>
     <dependency>
+      <groupId>eu.europeana.cloud</groupId>
+      <artifactId>ecloud-service-mcs-rest-client-java</artifactId>
+      <version>${version.ecloud}</version>
+    </dependency>
+    <dependency>
       <groupId>eu.europeana.corelib</groupId>
       <artifactId>corelib-web</artifactId>
       <version>${version.corelib}</version>
