--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -36,8 +36,7 @@ redis.password=
 solr.url=
 
 #ECloud
-ecloud.baseUisUrl=
-ecloud.baseMcsUrl=
+ecloud.baseUrl=
 ecloud.provider=
 ecloud.username=
 ecloud.password=
