MET-387 Add authentication client, update dataset calls using authorization header, update tests

--- a/metis-core-common/pom.xml
+++ b/metis-core-common/pom.xml
@@ -40,6 +40,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>eu.europeana.metis</groupId>
+      <artifactId>metis-authentication-common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>eu.europeana.cloud</groupId>
       <artifactId>ecloud-service-dps-rest-client-java</artifactId>
       <version>${version.ecloud}</version>
