--- a/metis-core-rest/pom.xml
+++ b/metis-core-rest/pom.xml
@@ -144,6 +144,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>eu.europeana.metis</groupId>
+      <artifactId>metis-authentication-rest-client</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>${version.gson}</version>
