--- a/metis-core-service/pom.xml
+++ b/metis-core-service/pom.xml
@@ -41,6 +41,11 @@
   <dependencies>
     <dependency>
       <groupId>eu.europeana.metis</groupId>
+      <artifactId>metis-authentication-common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>eu.europeana.metis</groupId>
       <artifactId>metis-core-common</artifactId>
       <version>${project.version}</version>
     </dependency>
