MET-321 Add createdByUserId in dataset

--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -41,3 +41,9 @@ ecloud.dps.baseUrl=
 ecloud.provider=
 ecloud.username=
 ecloud.password=
+
+#Authentication
+authentication.baseUrl=
+
+#CORS
+allowed.cors.hosts=*
