MET-447 Change POMs to upgrade log4j and slf4j to the right version.
Note: this is still to be tested.

--- a/metis-core-rest/pom.xml
+++ b/metis-core-rest/pom.xml
@@ -39,10 +39,21 @@
     </plugins>
   </build>
   <dependencies>
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-simple</artifactId>
+	    <version>${version.slf4j}</version>
+	</dependency>
     <dependency>
       <groupId>eu.europeana.cloud</groupId>
       <artifactId>ecloud-service-uis-rest-client-java</artifactId>
       <version>${version.ecloud}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>slf4j-simple</artifactId>
+          <groupId>org.slf4j</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>eu.europeana.cloud</groupId>
