Updated all POMs for Java 8 support

--- a/metis-core-rest/pom.xml
+++ b/metis-core-rest/pom.xml
@@ -28,6 +28,10 @@
   <artifactId>metis-core-rest</artifactId>
   <build>
     <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+        </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
