MET-834 Add extra parameter handling for rabbitmq compose.

--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -22,8 +22,10 @@ rabbitmq.host=
 rabbitmq.port=
 rabbitmq.username=
 rabbitmq.password=
+rabbitmq.virtual.host=
 rabbitmq.queue.name=
 rabbitmq.highest.priority=
+rabbitmq.enableSSL=
 
 #Mongo
 mongo.hosts=
