MET-892 Add support for xslt transformation on the fly and update xslt processor version.
With this commit the used processor for xslt was changed from the java default one to the Saxon HE implementation that supports XSLT 2.0.

--- a/metis-core-service/pom.xml
+++ b/metis-core-service/pom.xml
@@ -46,6 +46,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <artifactId>metis-transformation-service</artifactId>
+      <groupId>eu.europeana.metis</groupId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>eu.europeana.cloud</groupId>
       <artifactId>ecloud-service-mcs-rest-client-java</artifactId>
       <version>${version.ecloud}</version>
