Fix enable non custom certificates for redis connections.
This is to accommodate the new changes in bluemix where they now support connections with non custom certificates.

--- a/metis-core-rest/src/main/resources/metis.properties.example
+++ b/metis-core-rest/src/main/resources/metis.properties.example
@@ -41,6 +41,8 @@ redis.host=
 redis.port=0
 redis.password=
 redis.enableSSL=
+#True if a custom certificate is used in the truststore defined above
+redis.enable.custom.truststore=
 
 solr.url=
 
